--- a/.air.toml
+++ b/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "bin"
   bin = "bin\\main.exe"
   cmd = "go build -o ./bin/main.exe ./cmd/api"
   delay = 1000
-  exclude_dir = ["assets", "bin", "vendor", "testdata", "docs", "scripts"]
+  exclude_dir = ["assets", "bin", "vendor", "testdata", "docs", "scripts", "bruno_http"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
